<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"> <!--IMPORTANT otherwise backgrnd img. will not fill the whole screen -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="28dp"
            android:fontFamily="@font/amatic_regular"
            android:text="Registration"
            android:textColor="@color/white"
            android:textSize="35dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/rtext"
            app:layout_constraintStart_toEndOf="@+id/rtext" />

        <TextView
            android:id="@+id/rtext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/amatic_regular"
            android:text="Full Name"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/name"
            app:layout_constraintStart_toStartOf="@+id/name" />

        <EditText
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:layout_marginEnd="44dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/ntext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/amatic_regular"
            android:text="Email"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <EditText
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/ntext"
            app:layout_constraintTop_toTopOf="@+id/ntext" />

        <TextView
            android:id="@+id/etext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/amatic_regular"
            android:text="Password"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="@color/white"
            android:fontFamily="@font/amatic_regular"
            android:gravity="center"
            android:text="Create My Account"
            android:textColor="@color/primary_lighter"
            android:textSize="20dip"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/lnkLogin"
            app:layout_constraintEnd_toEndOf="@+id/lnkLogin"
            app:layout_constraintStart_toStartOf="@+id/lnkLogin"
            app:layout_constraintTop_toBottomOf="@+id/userType"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/europe_underground_light"
            android:inputType="textPassword"
            android:textSize="25dp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/etext"
            app:layout_constraintTop_toBottomOf="@+id/etext" />

        <RadioGroup
            android:id="@+id/genderOptions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="67dp"
            android:layout_marginBottom="64dp"
            android:background="@color/light_brown"
            app:layout_constraintBottom_toBottomOf="@+id/userType"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etext"
            app:layout_constraintVertical_bias="0.771">

            <RadioButton
                android:id="@+id/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/amatic_regular"
                android:text="Male"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_regular"
                android:text="Female"
                android:textSize="22sp" />

            <RadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_regular"
                android:text="Not  Listed"
                android:textSize="22sp" />

        </RadioGroup>

        <RadioGroup
            android:id="@+id/userType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="168dp"
            android:layout_marginTop="112dp"
            android:background="@color/white"
            android:fontFamily="@font/amatic_regular"
            android:gravity="center"
            android:textColor="@color/primary_lighter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <RadioButton
                android:id="@+id/Customer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/amatic_regular"
                android:text="Customer"
                android:textColor="@color/primary_lighter"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/Merchant"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/amatic_regular"
                android:text="Merchant"
                android:textColor="@color/primary_lighter"
                android:textStyle="bold" />

        </RadioGroup>

        <TextView
            android:id="@+id/lnkLogin"
            android:layout_width="379dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="116dp"
            android:clickable="true"
            android:fontFamily="@font/amatic_regular"
            android:gravity="center"
            android:onClick="sendToLogin"
            android:text="Registered? Login here."
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>