...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/link_signup"
        android:layout_width="125dp"
        android:layout_height="49dp"
        android:layout_gravity="start"
        android:layout_marginStart="60dp"
        android:layout_marginTop="444dp"
        android:layout_marginEnd="60dp"
...
