...
            android:textStyle="bold"/>

    </RadioGroup>


    <Button
        android:id="@+id/update_profile"
        android:layout_width="76dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="400dp"
        android:background="@drawable/blue_round_button"
        android:enabled="true"
...
